# ccode

./: .gitignore  Makefile  README.md  c_pitfalls.md  cpp_pitfalls.md  demo.c  demo.txt  main  main.c
data_analysis/: CTE练习示例.sql  generate_demo_data.py  理财产品Demo数据.sql  理财产品表结构.sql
doc/: 静态库.md
mysql_client_cpp/: .gitignore  CMakeLists.txt  run.sh  方案.md
mysql_client_cpp/src/: MainWindow.cpp  MainWindow.h  main.cpp
src/: array.c  array.h  dynamic.c  dynamic.h  file.c  link.c  link.h  mem.c  mem.h  pointer.c  pointer.h  pointer_func.c  queue.c  queue.h  stack.c  stack.h  string.c  string.h  string_func.c  struct.h
src/link/: link_list.c
student_management/: README.md
student_manager_cpp/: Makefile  README.md  main.cpp  student.cpp  student.h
